data/all_generated_tests/raw_wast_tests/br_if_MismanagementofBlockNesting_1640.wast
;; 1. **Test 1: Single Loop with Conditional Branch**    - **Description:** A simple loop that runs a few iterations, with a `br_if` instruction that conditionally breaks the loop based on the value of the top stack operand.    - **Constraint Checked:** Correct indexing within a `loop` block.    - **Mismanagement Relation:** Ensuring that nesting within a loop handles indexed labels correctly when conditionally breaking the loop.

(assert_invalid
  (module
    (func $test1
      (loop (i32.const 0) (br_if 1 (i32.const 1)))
    )
  )
  "type mismatch"
)